update api to base http cÃlient functionality
